--- a/Index.html
+++ b/Index.html
@@ -2,64 +2,45 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>❤️not beutiful as u but still it is❤️</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
+  <title>College Wishlist - 3D carousel</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<div id="drag-container">
+  <div id="spin-container">
 
-<div class="paper heart">
 
+
+
+
+
+
+    <img src="imgs/777777.jpg" alt="">
+    <img src="imgs/2.jpeg" alt="">
+    <img src="imgs/3.jpeg" alt="">
+    <img src="imgs/4.jpg" alt="">
+    <img src="imgs/5.jpeg" alt="">
+    <img src="imgs/6.jpg" alt="">
+    <img src="imgs/7.jpg" alt="">
+
+
+    <video controls autoplay="autoplay" loop>
+      <source src="imgs/29.mp4" type="video/mp4">
+    </video>
+
+    <!-- Text at center of ground -->
+    <p>     Follow <mark>College_wishlist</mark></p>
+  </div>
+  <div id="ground"></div>
 </div>
 
-<div class="paper image">
-  <p>also, thanks!!</p>
-    <p>for being the person </p>
-    <p>who teached me how to love</p>
-
-</div>
+<div id="music-container"></div>
 
 
-  
-<div class="paper image">
-  <p> and I have fallen</p>
-    <p>so hard for You </p>
-    <p>💓💓</p>
-   <img src="1.jpg" />
-</div>
-
-<div class="paper image">
-  <p>ahhhh!!!</p>
-  <p> 💓💓❤️ </p>
-
-  <img src="2.jpg" />
-</div>
-
-<div class="paper image">
-  <p>beuty! </p>
-   <p> just look amount </p>
-   <p> of cuteness! ❤️ </p>
-
-  <img src="3.jpg" />
-</div>
-
-
-
-<div class="paper red">
-<p class="p1">never seen</p>
-<p class="p2">such an admirable😍</p>
-</div>
-
-<div class="paper">
-<p class="p1">You are Cute </p>
-  <p class="p1">and Amazing <span style="color: red !important;">❤️</span></p>
-</div>
-
-<div class="paper">
-<p class="p1">Drag to see what inside!</p>
-</div>
+<style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 <!-- partial -->
   <script  src="./script.js"></script>
 
 </body>
-</html>
