--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
 <p>Contents here as usual.</p>
 
   <!-- BACKGROUND MUSIC -->
-<audio src="song.mp3" autoplay loop></audio>
+<audio src="song.mp3" autoplay controls loop></audio>
 
 </body>
 
