--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>for love of my life💓💓</title>
-  <link rel="stylesheet" href="./style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Embedded Video Page</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #121212;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+    .video-container {
+      width: 80%;
+      max-width: 900px;
+      aspect-ratio: 16/9;
+    }
+    iframe, video {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id="drag-container">
-  <div id="spin-container">
+  <div class="video-container">
+    <!-- Example: YouTube embed -->
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+            title="YouTube video player" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 
-
-
-
-
-
-
-    <img src=" 1.jpg" alt="">
-    <img src=" 2.jpg" alt="">
-    <img src=" 3.jpg" alt="">
-    <img src=" 33.jpg" alt="">
-    <img src=" 44.jpg" alt="">
-    <img src=" 22.jpg" alt="">
-    <img src="Untitled.png" alt="">
-
-
-
-    <!-- Text at center of ground -->
-    <p>     thanks to be
-    <mark> love of my life</mark></p> 
+    <!-- Example: Direct video file -->
+    <!-- <video controls>
+      <source src="https://www.example.com/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video> -->
   </div>
-  <div id="ground"></div>
-</div>
-
-<div id="music-container"></div>
-
-
-<style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-<p>Contents here as usual.</p>
-
-  <!-- BACKGROUND MUSIC -->
-<audio src="song.mp3" autoplay controls loop></audio>
-
 </body>
+</html>
