--- a/index.html
+++ b/index.html
@@ -1,47 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Embedded Video Page</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: #121212;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-    .video-container {
-      width: 80%;
-      max-width: 900px;
-      aspect-ratio: 16/9;
-    }
-    iframe, video {
-      width: 100%;
-      height: 100%;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.6);
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hello Kitty Dreams</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="video-container">
-    <!-- Example: YouTube embed -->
-    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-            title="YouTube video player" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen></iframe>
 
-    <!-- Example: Direct video file -->
-    <!-- <video controls>
-      <source src="https://www.example.com/video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video> -->
+<!-- 🔒 LOCK SCREEN -->
+<div id="locked-screen">
+  <div class="lock-card">
+    <h2>🔒 Just for you</h2>
+    <p class="hint">hint: name of person who sent u dis 🌸</p>
+
+    <input type="password" id="passwordInput" placeholder="enter password" />
+    <button id="unlockBtn">unlock 💗</button>
+
+    <p class="error" id="errorMsg">achhaa walaa naam yarrrr 🥰🐱</p>
   </div>
+</div>
+
+<!-- 🌷 ACTUAL WEBSITE -->
+<div id="site-content" style="display:none;">
+  <main class="app">
+
+    <section class="hero">
+      <img class="kitty"
+        src="ChatGPT Image Jan 6, 2026, 11_38_02 PM.png"
+        alt="Hello Kitty" />
+      <h1>hey you 🌸</h1>
+      <p>a soft little corner made with pink thoughts</p>
+    </section>
+
+    <section class="cards">
+      <div class="card">you make ordinary days feel lighter ✨</div>
+      <div class="card">soft smiles & quiet care 🎀</div>
+      <div class="card">some people feel like home 🐱</div>
+    </section>
+
+    <section class="gallery">
+      <div class="img-box">
+        <img src="1.jpg">
+      </div>
+      <div class="img-box">
+        <img src="2.png">
+      </div>
+      <div class="img-box">
+        <img src="3.jpg">
+      </div>
+      <div class="img-box">
+        <img src="4.jpg">
+      </div>
+    </section>
+
+    <section class="love-strip">
+      <span>💗 gentle love</span>
+      <span>🎀 safe place</span>
+      <span>🌸 soft hearts</span>
+      <span>🐱 kitty vibes</span>
+      <span>✨ warm smiles</span>
+    </section>
+
+    <section class="open-notes">
+      <div class="note">tap me 💕</div>
+      <div class="note">tap me 🌷</div>
+      <div class="note">tap me 🎀</div>
+    </section>
+
+    <button id="surpriseBtn">TAP ME💖</button>
+
+    <p class="surprise" id="surpriseText">
+      this page isn’t loud,  
+      but it’s full of you 
+      sorry for annoying u januu💗
+    </p>
+
+  </main>
+
+  <!-- floating love -->
+  <div class="float-heart">💗</div>
+  <div class="float-heart">🎀</div>
+  <div class="float-heart">🐱</div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
