--- a/index.html
+++ b/index.html
@@ -3,87 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello Kitty Dreams</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Entry ❤️</title>
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ffb6c1, #ffd6a5);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .card {
+      background: rgba(255,255,255,0.92);
+      width: 90%;
+      max-width: 420px;
+      border-radius: 22px;
+      padding: 30px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    h1 {
+      margin-top: 0;
+      font-size: 1.9rem;
+    }
+    .buttons {
+      margin-top: 25px;
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+    button {
+      padding: 14px 26px;
+      border: none;
+      border-radius: 30px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    #yes {
+      background: #ff4b5c;
+      color: white;
+      transform: scale(1);
+    }
+    #no {
+      background: #ddd;
+      color: #333;
+    }
+    #message {
+      margin-top: 20px;
+      font-size: 1.05rem;
+      min-height: 1.4em;
+    }
+  </style>
 </head>
 <body>
+  <div class="card">
+    <h1>are u ready my rasmalai 💗</h1>
 
-<!-- 🔒 LOCK SCREEN -->
-<div id="locked-screen">
-  <div class="lock-card">
-    <h2>🔒 Just for you</h2>
-    <p class="hint">hint: name of person who sent u dis 🌸</p>
+    <div class="buttons">
+      <button id="yes" onclick="goYes()">Yes</button>
+      <button id="no" onclick="clickNo()">No</button>
+    </div>
 
-    <input type="password" id="passwordInput" placeholder="enter password" />
-    <button id="unlockBtn">unlock 💗</button>
-
-    <p class="error" id="errorMsg">achhaa walaa naam yarrrr 🥰🐱</p>
+    <div id="message"></div>
   </div>
-</div>
 
-<!-- 🌷 ACTUAL WEBSITE -->
-<div id="site-content" style="display:none;">
-  <main class="app">
+  <script>
+    let noCount = 0;
+    let yesScale = 1;
 
-    <section class="hero">
-      <img class="kitty"
-        src="ChatGPT Image Jan 6, 2026, 11_38_02 PM.png"
-        alt="Hello Kitty" />
-      <h1>hey you 🌸</h1>
-      <p>a soft little corner made with pink thoughts</p>
-    </section>
+    function clickNo() {
+      noCount++;
+      yesScale += 0.25;
+      document.getElementById('yes').style.transform = `scale(${yesScale})`;
 
-    <section class="cards">
-      <div class="card">you make ordinary days feel lighter ✨</div>
-      <div class="card">soft smiles & quiet care 🎀</div>
-      <div class="card">some people feel like home 🐱</div>
-    </section>
+      if (noCount === 1) {
+        document.getElementById('message').innerText = 'think again';
+      } else if (noCount === 2) {
+        document.getElementById('message').innerText = 'ro du kya ? 😢😢';
+      } else {
+        document.getElementById('message').innerText = '';
+      }
 
-    <section class="gallery">
-      <div class="img-box">
-        <img src="1.jpg">
-      </div>
-      <div class="img-box">
-        <img src="2.png">
-      </div>
-      <div class="img-box">
-        <img src="3.jpg">
-      </div>
-      <div class="img-box">
-        <img src="4.jpg">
-      </div>
-    </section>
+      if (noCount >= 2) {
+        const yesBtn = document.getElementById('yes');
+        const noBtn = document.getElementById('no');
 
-    <section class="love-strip">
-      <span>💗 gentle love</span>
-      <span>🎀 safe place</span>
-      <span>🌸 soft hearts</span>
-      <span>🐱 kitty vibes</span>
-      <span>✨ warm smiles</span>
-    </section>
+        const yesRect = yesBtn.getBoundingClientRect();
+        const noRect = noBtn.getBoundingClientRect();
 
-    <section class="open-notes">
-      <div class="note">tap me 💕</div>
-      <div class="note">tap me 🌷</div>
-      <div class="note">tap me 🎀</div>
-    </section>
+        if (yesRect.width >= noRect.width * 1.2) {
+          noBtn.style.opacity = '0';
+          noBtn.style.pointerEvents = 'none';
+        }
+      }
+    }
 
-    <button id="surpriseBtn">TAP ME💖</button>
-
-    <p class="surprise" id="surpriseText">
-      this page isn’t loud,  
-      but it’s full of you 
-      sorry for annoying u januu💗
-    </p>
-
-  </main>
-
-  <!-- floating love -->
-  <div class="float-heart">💗</div>
-  <div class="float-heart">🎀</div>
-  <div class="float-heart">🐱</div>
-</div>
-
-<script src="script.js"></script>
+    function goYes() {
+      window.location.href = 'landing.html';
+    }
+  </script>
 </body>
 </html>
