--- a/landing.html
+++ b/landing.html
@@ -214,7 +214,7 @@ I’m telling you.
   // 🔑 SIMPLE, CORRECT LOGIC
   const YEAR = new Date().getFullYear();
   const START = new Date(YEAR, 1, 7); // Feb 7
-  const TODAY = new Date(2026,1,14);
+  const TODAY = new Date();
   TODAY.setHours(0,0,0,0);
 
   const grid = document.getElementById('grid');
@@ -243,4 +243,5 @@ I’m telling you.
   });
 </script>
 </body>
+
 </html>
