--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entry ❤️</title>
+  <title>Entry </title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -62,7 +62,14 @@
 </head>
 <body>
   <div class="card">
-    <h1>are u ready my rasmalai 💗</h1>
+    <h1> <p>You lost me 🙂 ik that won't affect u much cuz faltu chize gum ho jaye toh koi fark nai padta.
+    This time if u find me i wont be same again.
+    not cuz i don't love u anymore.
+    but i am tired of begging.I am not blaming u i wa the one to fall in love and wait.
+    The air between us is not same anymore so i won't give u anymore problems,
+    I won't fall in love ever again , khudko dubara ye galti nai karne dunga ab kisi se itna attched nai hounga 
+    Farewell. 💗
+    All the very best for your future. </p></h1>
 
     <div class="buttons">
       <button id="yes" onclick="goYes()">Yes</button>
@@ -82,9 +89,9 @@
       document.getElementById('yes').style.transform = `scale(${yesScale})`;
 
       if (noCount === 1) {
-        document.getElementById('message').innerText = 'think again';
+        document.getElementById('message').innerText = '';
       } else if (noCount === 2) {
-        document.getElementById('message').innerText = 'ro du kya ? 😢😢';
+        document.getElementById('message').innerText = '';
       } else {
         document.getElementById('message').innerText = '';
       }
@@ -104,7 +111,6 @@
     }
 
     function goYes() {
-      window.location.href = 'landing.html';
     }
   </script>
 </body>
